--- a/face_mask_detection/face_mast_detection.ipynb
+++ b/face_mask_detection/face_mast_detection.ipynb
@@ -8595,10 +8595,27 @@
         "accuracy_augmented"
       ],
       "metadata": {
-        "id": "5WHwiApf6Pz0"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "id": "5WHwiApf6Pz0",
+        "outputId": "b8103bfb-35f1-4ef2-f7ee-2465044bbfeb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'accuracy_augmented' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3059048943.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maccuracy_augmented\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'accuracy_augmented' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -8634,7 +8651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -8666,7 +8683,9 @@
             "\u001b[1m189/189\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1330s\u001b[0m 7s/step - accuracy: 0.8418 - loss: 0.3816 - val_accuracy: 0.9537 - val_loss: 0.1239\n",
             "Epoch 2/2\n",
             "\u001b[1m189/189\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1306s\u001b[0m 7s/step - accuracy: 0.9404 - loss: 0.1472 - val_accuracy: 0.9636 - val_loss: 0.0855\n",
-            "Evaluating the pretrained model with data augmentation...\n"
+            "Evaluating the pretrained model with data augmentation...\n",
+            "Testing Loss (Pretrained Model with Augmentation): 0.0855\n",
+            "Testing Accuracy (Pretrained Model with Augmentation): 0.9636\n"
           ]
         }
       ],
